# Fenrir-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
src/: cli.rs  config.rs  errors.rs  ioc.rs  logger.rs  main.rs  scanner.rs  system_info.rs
src/checks/: c2.rs  filename.rs  hash.rs  mod.rs  strings.rs  timeframe.rs
