# fenrir-rust/Cargo.toml
[package]
name = "fenrir-rust"
version = "0.9.0" # Match original script version
edition = "2021"
authors = ["Original: Florian Roth", "Rewrite: AI Assistant"]
description = "Secure Rust rewrite of the Fenrir Bash IOC Scanner"
license = "MIT"

[dependencies]
# Command Line Interface
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration
lazy_static = "1.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "local-time"] }
tracing-appender = "0.2"
syslog = { version = "6.1", optional = true }

# Filesystem & IO
walkdir = "2.5"
regex = "1.10"

# Hashing
# Corrected: Updated md5 version to align with sha1/sha2 and digest trait usage
md5 = "0.7.0"
sha1 = { version = "0.10", features = ["oid"] }
sha2 = "0.10"
hex = "0.4"
digest = "0.10" # Generic trait for hashers

# String Matching
aho-corasick = "1.1"

# Compression Libraries
flate2 = "1.0"
bzip2 = "0.4"

# Network & System Info
hostname = "0.3"
num_cpus = "1.16"
# Using std::process::Command for lsof initially

# Error Handling
thiserror = "1.0"

# Concurrency
rayon = "1.10"

# Time
chrono = { version = "0.4", features = ["now", "std"] }

[features]
# Feature flag for syslog
default = []
syslog_logging = ["dep:syslog"]

# Profile for release builds
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

# Attempt static linking for linux-musl target
[target.x86_64-unknown-linux-musl.dependencies]

[target.aarch64-unknown-linux-musl.dependencies]
